@@ -18,6 +18,7 @@
 package org.apache.solr.core;
 
 import org.apache.solr.common.util.NamedList;
+import org.apache.solr.handler.PingRequestHandler;
 import org.apache.solr.request.LocalSolrQueryRequest;
 import org.apache.solr.request.SolrQueryRequest;
 
@@ -151,7 +152,9 @@ public class SolrConfig extends Config {
   // default & main index configurations
   public final SolrIndexConfig defaultIndexConfig;
   public final SolrIndexConfig mainIndexConfig;
+  
   // ping query request parameters
+  @Deprecated
   private final NamedList pingQueryParams;
 
   static private NamedList readPingQueryParams(SolrConfig config) {  
@@ -172,7 +175,10 @@ public class SolrConfig extends Config {
   /**
    * Returns a Request object based on the admin/pingQuery section
    * of the Solr config file.
+   * 
+   * @use {@link PingRequestHandler} instead 
    */
+  @Deprecated
   public SolrQueryRequest getPingQueryRequest(SolrCore core) {
     return new LocalSolrQueryRequest(core, pingQueryParams);
   }
